# python

./: .gitignore  CMakeLists.txt  README.md  oracle.cmake  walker.py
ctools/: CMakeLists.txt
ctools/accuity/: CMakeLists.txt
ctools/accuity/httpserver/: CMakeLists.txt
ctools/accuity/idl2_build/: CMakeLists.txt
ctools/accuity/sql_build/: CMakeLists.txt
ctools/audio/: CMakeLists.txt  inputs.list
ctools/audio/cpp/: CMakeLists.txt  main_props.cpp  main_times.cpp
ctools/audio/cpp/aax_utilities/: CMakeLists.txt  main_tags.cpp
ctools/audio/cpp/mssql_tests/: CMakeLists.txt  main.cpp  main.h
ctools/audio/py/: aaxlist.py  aaxlist.txt  limerick.txt  mutalook.py  push.py  tvdb_api.py
ctools/audio/pyproj/: CMakeLists.txt  audio.py  audio_db2.py  audio_db2.pyproj  audio_lite3.py  audio_lite3.pyproj  audio_mssql.py  audio_mssql.pyproj  audio_mysql.py  audio_mysql.pyproj  audio_odbc.py  audio_odbc.pyproj  audio_oracle.py  audio_oracle.pyproj  audio_postgre.py  audio_postgre.pyproj  azure_lite3.py  azure_lite3.pyproj  azure_mssql.py  azure_mssql.pyproj  azure_odbc.py  azure_odbc.pyproj  books.db  books.db-journal  filenames.py  lookup_mssql.py  lookup_mssql.pyproj  lookup_odbc.pyproj  struct_test.py
ctools/audio/pyproj/pyasdata/: ids_list.txt
ctools/audio/pyproj/support/: fixer.py
ctools/audio/sql_build/: CMakeLists.txt  book.si
ctools/audio/utility/audio/: audio.py  audio.pyproj  audio.sln  audio_db2.py  audio_db2.pyproj  audio_lite3.py  audio_lite3.pyproj  audio_mssql.py  audio_mssql.pyproj  audio_mysql.py  audio_mysql.pyproj  audio_odbc.py  audio_odbc.pyproj  audio_oracle.py  audio_oracle.pyproj  audio_postgre.py  audio_postgre.pyproj  books.db  lookup_mssql.py  lookup_mssql.pyproj
ctools/audio/utility/audio/pyasdata/: aaxlist.py  ids_list.py  ids_list.txt
ctools/audio/utility/py/: aaxlist.py  aaxlist.txt  copier.py  copyfiles.py  garethset.py  makelist.py  mutalook.py  myfam.py  tobewatched.py
ctools/azure/: CMakeLists.txt
ctools/azure/sql_build/: CMakeLists.txt  accuitycorrespondent.si  accuityofficer.si  accuityoverride.si  accuityroutingatt.si  accuityroutingcode.si  comments.si  dates.si  dbportal.cmake  drivers.si  fields.si  fieldsearch.si  fieldsearchdefnew.si  reply.si  staffqueueconfig.si  streams.si  streamtype.si
ctools/azure/sql_build/check_sh/: CMakeLists.txt
ctools/dbapi/: dbapishell.cpp  dbapishell.h
ctools/dbapi/front/mcpe/: putty3shell.cpp  putty3shell.h
ctools/dbapi/front/py/: ALMANAC_LOADER.py  CONSTS.py  DBPORTAL.py  DEPRECATED_STRING.py  EXPORT_STREAMS.py  FIG.py  GENERAL_ROUTINES.py  INTRINSICS.py  SCRIPT_QUEUES.py  SYS_CLEANUP.py  SYS_FUNCTIONS.py  UTIL_UUID.py
ctools/gps/: CMakeLists.txt
ctools/gps/sql_build/: CMakeLists.txt
ctools/libs/: CMakeLists.txt
ctools/libs/main/src/: databuilderjp.h  splits.cpp
ctools/libs/portal/: CMakeLists.txt
ctools/libs/portal/mss_17/: CMakeLists.txt
ctools/libs/portal/mss_17/include/: mssapi.h  mssmachine.h
ctools/libs/portal/mss_17/src/: mssapi.cpp
ctools/libs/ti/src/: list.h
ctools/mcpe/: CMakeLists.txt
ctools/mcpe/py/fixup/: fixup.py  fixup.pyproj
ctools/mcpe/sql_build/: CMakeLists.txt
ctools/testings/testings/: testings.py  testings.pyproj
ctools/tests/: CMakeLists.txt
ctools/tests/db2_test/: CMakeLists.txt  main.cpp
ctools/tests/oci_test/: CMakeLists.txt
ctools/tests/odbc_mysql_test/: CMakeLists.txt
ctools/tests/odbc_oracle_test/: CMakeLists.txt  main.cpp
ctools/tests/odbc_postgre_test/: CMakeLists.txt  main.cpp
jtools/: .gitignore  makecrackle.cmd  makejars.cmd  makejportal.cmd
jtools/crackle/: Action.java  Compiler.java  Enumerator.java  Field.java  Generator.java  IDL.java  IDL.jj  IDLConstants.java  IDLTokenManager.java  Message.java  Module.java  Operation.java  Parameter.java  ParseException.java  Prototype.java  SimpleCharStream.java  Structure.java  Token.java  TokenMgrError.java  Type.java  Writer.java
jtools/crackle/http/: Argument.java  PopHTTP.java  PopHTTPImpl.java  PopHTTPOpenApi.java  PopHTTPPython.java  PopHTTPServer.java  PopHTTPSwagger.java
jtools/jportal/: Compiler.java  Database.java  Enum.java  Field.java  Flag.java  Generator.java  Grant.java  JPortal.java  JPortal.jj  JPortalConstants.java  JPortalTokenManager.java  Key.java  Limit.java  Line.java  Link.java  Parameter.java  ParseException.java  Proc.java  Sequence.java  SimpleCharStream.java  TJCStructs.java  Table.java  Token.java  TokenMgrError.java  Value.java  View.java  With.java  Writer.java
jtools/jportal/code/: CliC.java  CliCCode.java  Lite3C.java  Lite3CCode.java  MSSqlC.java  MSSqlCCode.java  MySqlC.java  (+11 more)
jtools/src/: crackle.args  ibfiles.list  iifiles.list  inputs.list  jportal.args
ktools/: build.gradle.kts  settings.gradle.kts
laz/: .gitignore
laz/arkham/: CMakeLists.txt
laz/wordgame/: WordGame.lpi  WordGame.lpr  WordGame.lps  wordgameunit.lfm  wordgameunit.pas
laz/wordle/: JAZZY.txt  Wordle.lpi  Wordle.lpr  Wordle.lps  bizarre.txt  collins2019.txt  dictionary.txt  gamewords.txt  link9220.res  ppas.bat  sowpods.txt  usedwords.txt  wordle.db  wordle.db-journal  wordle.ini  wordle.sln  wordle.sqbpro  wordle.txt  wordle2309.py  wordleunit.lfm  wordleunit.pas  words.asm
pytools/: anydbMake.py  cobblercsv.py  db.py  dbapi_annotate.py  dbapi_merge.py  dbapi_util.py  dbapi_util_db2.py  dbapi_util_lite3.py  dbapi_util_mssql.py  dbapi_util_mysql.py  dbapi_util_odbc.py  dbapi_util_oracle.py  dbapi_util_postgre.py  extract_message.py  http_ini_gen.py  http_makes.py  http_run.py  i3_to_list.py  i3func.py  libfront-setup.py  lite3SQL.py  make_pyproj.py  maker.py  project_setup.py  python_zip_maker.py  struct_test.py  sys_func_fix.py  tester.py  testpack.py  use2import.py  xml_to_dict.py  xmlutils.py  xsd_load_tester.py  xsd_py_gen.py  xsd_usage_example.py
pytools/xsd_py_gen/: .gitignore  UpgradeLog.htm  base85.py  dict_utils.py  gends_util.py  json_yaml_tester.py  openapi_test.py  python_front.py  runner.py  simon_commontypes.py  test_attrib.py  tester.py  typing_usage.py  xsd_load_tester.py  xsd_py_gen.py  xsd_py_gen.pyproj  xsd_py_gen.sln  xsd_py_gen.txt
(+710 files in other folders)
